[package]
name = "dm-cw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[feature]
library = []

[dependencies]
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cosmwasm-schema = "1.1.5"
cosmwasm-std = "1.1.5"
cw-storage-plus = "0.16.0"
thiserror = "1.0.31"
hex = "0.3.2"
sha2 = "0.8.2"
